// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultSearchControl desktop renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
  >
    <div
      class="MuiGrid-root-32 makeStyles-firstRow-1 MuiGrid-container-33 MuiGrid-align-items-xs-center-41 MuiGrid-justify-content-xs-space-between-52"
    >
      <div>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-373"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Only show deposits
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-373"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Hide dust
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-label-202"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-373"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              🚀 Boosted Vaults
            </p>
          </span>
        </label>
      </div>
      <div>
        <div
          aria-label="apy apr selector"
          class="MuiButtonGroup-root-205"
          role="group"
        >
          <button
            aria-selected="true"
            class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-outlined-234 MuiButtonGroup-grouped-211 MuiButtonGroup-groupedHorizontal-212 MuiButtonGroup-groupedOutlined-219 MuiButtonGroup-groupedOutlinedHorizontal-220 MuiButtonGroup-groupedOutlined-219 makeStyles-selected-203 makeStyles-button-204"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-230"
            >
              APY
            </span>
            <span
              class="MuiTouchRipple-root-373"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-outlined-234 MuiButtonGroup-grouped-211 MuiButtonGroup-groupedHorizontal-212 MuiButtonGroup-groupedOutlined-219 MuiButtonGroup-groupedOutlinedHorizontal-220 MuiButtonGroup-groupedOutlined-219 makeStyles-button-204"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-230"
            >
              APR
            </span>
            <span
              class="MuiTouchRipple-root-373"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-32 makeStyles-root-258 MuiGrid-container-33"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-261 makeStyles-formControl-259"
        >
          <label
            class="MuiFormLabel-root-277 MuiInputLabel-root-265 MuiInputLabel-formControl-271 MuiInputLabel-animated-274 MuiInputLabel-outlined-276"
            data-shrink="false"
            id="status-selector-id-label"
          >
            Status
          </label>
          <div
            class="MuiInputBase-root-311 MuiOutlinedInput-root-296 MuiInputBase-formControl-312"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="status-selector-id-label status-selector"
              class="MuiSelect-root-285 MuiSelect-select-286 MuiSelect-selectMenu-289 MuiSelect-outlined-288 MuiInputBase-input-322 MuiOutlinedInput-input-306"
              id="status-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-295"
              data-testid="status-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-291 MuiSelect-iconOutlined-294"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-333 MuiOutlinedInput-notchedOutline-305"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-335"
              >
                <span>
                  Status
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-261 makeStyles-formControl-337"
        >
          <label
            class="MuiFormLabel-root-277 MuiInputLabel-root-265 MuiInputLabel-formControl-271 MuiInputLabel-animated-274 MuiInputLabel-outlined-276"
            data-shrink="false"
            id="platform-selector-id-label"
          >
            Platform
          </label>
          <div
            class="MuiInputBase-root-311 MuiOutlinedInput-root-296 MuiInputBase-formControl-312"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="platform-selector-id-label platform-selector"
              class="MuiSelect-root-285 MuiSelect-select-286 MuiSelect-selectMenu-289 MuiSelect-outlined-288 MuiInputBase-input-322 MuiOutlinedInput-input-306"
              id="platform-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-295"
              data-testid="platform-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-291 MuiSelect-iconOutlined-294"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-333 MuiOutlinedInput-notchedOutline-305"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-335"
              >
                <span>
                  Platform
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-261 makeStyles-formControl-339"
        >
          <label
            class="MuiFormLabel-root-277 MuiInputLabel-root-265 MuiInputLabel-formControl-271 MuiInputLabel-animated-274 MuiInputLabel-outlined-276"
            data-shrink="false"
            id="rewards-selector-id-label"
          >
            Rewards
          </label>
          <div
            class="MuiInputBase-root-311 MuiOutlinedInput-root-296 MuiInputBase-formControl-312"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="rewards-selector-id-label rewards-selector"
              class="MuiSelect-root-285 MuiSelect-select-286 MuiSelect-selectMenu-289 MuiSelect-outlined-288 MuiInputBase-input-322 MuiOutlinedInput-input-306"
              id="rewards-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-295"
              data-testid="rewards-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-291 MuiSelect-iconOutlined-294"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-333 MuiOutlinedInput-notchedOutline-305"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-335"
              >
                <span>
                  Rewards
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66 MuiGrid-grid-md-true-94 MuiGrid-grid-lg-6-114"
      >
        <div
          class="MuiFormControl-root-261 MuiTextField-root-343 makeStyles-root-341"
        >
          <div
            class="MuiInputBase-root-311 MuiOutlinedInput-root-296 MuiInputBase-formControl-312 MuiInputBase-adornedEnd-316 MuiOutlinedInput-adornedEnd-301"
          >
            <input
              aria-invalid="false"
              aria-label="Vault Search"
              class="MuiInputBase-input-322 MuiOutlinedInput-input-306 MuiInputBase-inputAdornedEnd-327 MuiOutlinedInput-inputAdornedEnd-310"
              placeholder="Search by vault name, token, rewards..."
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root-344 MuiInputAdornment-positionEnd-347"
            >
              <button
                aria-label="search"
                class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-icon-342 MuiIconButton-sizeSmall-158"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-159"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-373"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-333 MuiOutlinedInput-notchedOutline-305"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-334"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-auto-65"
      >
        <button
          class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-text-231 MuiButton-textPrimary-232 MuiButton-fullWidth-252"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-230"
          >
            CLEAR ALL
          </span>
          <span
            class="MuiTouchRipple-root-373"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultSearchControl mobile opens filter dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-container-33"
      >
        <div
          class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
        >
          <label
            class="MuiFormControlLabel-root-135"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-150"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-163"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-375"
              />
            </span>
            <span
              class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
            >
              <p
                class="MuiTypography-root-172 MuiTypography-body2-173"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-item-34 MuiGrid-justify-content-xs-flex-end-51 MuiGrid-grid-xs-true-66"
        >
          <button
            class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-text-231 makeStyles-button-373"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-230 makeStyles-buttonLabel-374"
            >
              <p
                class="MuiTypography-root-172 MuiTypography-body2-173 MuiTypography-displayInline-200"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-375"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialog-root-358"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-385"
      style="opacity: 1;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-361 MuiDialog-scrollPaper-359"
      role="none presentation"
      style="opacity: 1;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-4 MuiDialog-paper-362 MuiDialog-paperScrollPaper-363 MuiDialog-paperWidthXl-370 MuiDialog-paperFullWidth-371 MuiPaper-elevation24-31 MuiPaper-rounded-5"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-387 makeStyles-title-351"
        >
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-align-items-xs-center-41 MuiGrid-justify-content-xs-space-between-52"
          >
            <h5
              class="MuiTypography-root-172 MuiTypography-h5-181 MuiTypography-displayInline-200"
            >
              Filter & Search
            </h5>
            <button
              aria-label="close vault filters"
              class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-closeButton-353"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-163"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-375"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-388 makeStyles-content-352"
        >
          <hr
            class="MuiDivider-root-390 makeStyles-topDivider-356"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-direction-xs-column-36"
          >
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-375"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    Only show deposits
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-375"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    Hide dust
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135 makeStyles-label-397"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-375"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    🚀 Boosted Vaults
                  </p>
                </span>
              </label>
            </div>
          </div>
          <hr
            class="MuiDivider-root-390 makeStyles-divider-355"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-direction-xs-column-36"
          >
            <div
              class="MuiGrid-root-32 makeStyles-select-354 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-400 makeStyles-formControl-398"
              >
                <label
                  class="MuiFormLabel-root-416 MuiInputLabel-root-404 MuiInputLabel-formControl-410 MuiInputLabel-animated-413 MuiInputLabel-shrink-412 MuiInputLabel-outlined-415 MuiFormLabel-filled-421"
                  data-shrink="true"
                  id="status-selector-id-label"
                >
                  Status
                </label>
                <div
                  class="MuiInputBase-root-450 MuiOutlinedInput-root-435 MuiInputBase-formControl-451"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="status-selector-id-label status-selector"
                    class="MuiSelect-root-424 MuiSelect-select-425 MuiSelect-selectMenu-428 MuiSelect-outlined-427 MuiInputBase-input-461 MuiOutlinedInput-input-445"
                    id="status-selector"
                    role="button"
                    tabindex="0"
                  >
                    guarded,  experimental
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-434"
                    data-testid="status-selector-input"
                    tabindex="-1"
                    value="guarded,experimental"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-430 MuiSelect-iconOutlined-433"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-472 MuiOutlinedInput-notchedOutline-444"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-474 PrivateNotchedOutline-legendNotched-475"
                    >
                      <span>
                        Status
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 makeStyles-select-354 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-400 makeStyles-formControl-476"
              >
                <label
                  class="MuiFormLabel-root-416 MuiInputLabel-root-404 MuiInputLabel-formControl-410 MuiInputLabel-animated-413 MuiInputLabel-shrink-412 MuiInputLabel-outlined-415 MuiFormLabel-filled-421"
                  data-shrink="true"
                  id="platform-selector-id-label"
                >
                  Platform
                </label>
                <div
                  class="MuiInputBase-root-450 MuiOutlinedInput-root-435 MuiInputBase-formControl-451"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="platform-selector-id-label platform-selector"
                    class="MuiSelect-root-424 MuiSelect-select-425 MuiSelect-selectMenu-428 MuiSelect-outlined-427 MuiInputBase-input-461 MuiOutlinedInput-input-445"
                    id="platform-selector"
                    role="button"
                    tabindex="0"
                  >
                    Convex,  Curve
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-434"
                    data-testid="platform-selector-input"
                    tabindex="-1"
                    value="Convex,Curve"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-430 MuiSelect-iconOutlined-433"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-472 MuiOutlinedInput-notchedOutline-444"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-474 PrivateNotchedOutline-legendNotched-475"
                    >
                      <span>
                        Platform
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 makeStyles-select-354 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-400 makeStyles-formControl-478"
              >
                <label
                  class="MuiFormLabel-root-416 MuiInputLabel-root-404 MuiInputLabel-formControl-410 MuiInputLabel-animated-413 MuiInputLabel-shrink-412 MuiInputLabel-outlined-415 MuiFormLabel-filled-421"
                  data-shrink="true"
                  id="rewards-selector-id-label"
                >
                  Rewards
                </label>
                <div
                  class="MuiInputBase-root-450 MuiOutlinedInput-root-435 MuiInputBase-formControl-451"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="rewards-selector-id-label rewards-selector"
                    class="MuiSelect-root-424 MuiSelect-select-425 MuiSelect-selectMenu-428 MuiSelect-outlined-427 MuiInputBase-input-461 MuiOutlinedInput-input-445"
                    id="rewards-selector"
                    role="button"
                    tabindex="0"
                  >
                    DCA,  Compounder
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-434"
                    data-testid="rewards-selector-input"
                    tabindex="-1"
                    value="DCA,Compounder"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-430 MuiSelect-iconOutlined-433"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-472 MuiOutlinedInput-notchedOutline-444"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-474 PrivateNotchedOutline-legendNotched-475"
                    >
                      <span>
                        Rewards
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-400 MuiTextField-root-482 makeStyles-root-480"
              >
                <div
                  class="MuiInputBase-root-450 MuiOutlinedInput-root-435 MuiInputBase-formControl-451 MuiInputBase-adornedEnd-455 MuiOutlinedInput-adornedEnd-440"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Vault Search"
                    class="MuiInputBase-input-461 MuiOutlinedInput-input-445 MuiInputBase-inputAdornedEnd-466 MuiOutlinedInput-inputAdornedEnd-449"
                    placeholder="Search by vault name, token, rewards..."
                    type="text"
                    value="bitcoin convex"
                  />
                  <div
                    class="MuiInputAdornment-root-483 MuiInputAdornment-positionEnd-486"
                  >
                    <button
                      aria-label="search"
                      class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-icon-481 MuiIconButton-sizeSmall-158"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label-159"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-163"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root-375"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-472 MuiOutlinedInput-notchedOutline-444"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-473"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-390 makeStyles-divider-355"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33"
          >
            <div
              class="MuiGrid-root-32 makeStyles-apr-357 MuiGrid-item-34"
            >
              <div
                aria-label="apy apr selector"
                class="MuiButtonGroup-root-492"
                role="group"
              >
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-outlined-234 MuiButtonGroup-grouped-498 MuiButtonGroup-groupedHorizontal-499 MuiButtonGroup-groupedOutlined-506 MuiButtonGroup-groupedOutlinedHorizontal-507 MuiButtonGroup-groupedOutlined-506 makeStyles-button-491"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-230"
                  >
                    APY
                  </span>
                  <span
                    class="MuiTouchRipple-root-375"
                  />
                </button>
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-outlined-234 MuiButtonGroup-grouped-498 MuiButtonGroup-groupedHorizontal-499 MuiButtonGroup-groupedOutlined-506 MuiButtonGroup-groupedOutlinedHorizontal-507 MuiButtonGroup-groupedOutlined-506 makeStyles-selected-490 makeStyles-button-491"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-230"
                  >
                    APR
                  </span>
                  <span
                    class="MuiTouchRipple-root-375"
                  />
                </button>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-390 makeStyles-divider-355"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-spacing-xs-2-56 MuiGrid-justify-content-xs-flex-end-51"
          >
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <button
                class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-text-231 MuiButton-textPrimary-232"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-230"
                >
                  Clear All
                </span>
                <span
                  class="MuiTouchRipple-root-375"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <button
                class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-contained-237 MuiButton-containedPrimary-238"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-230"
                >
                  Apply Filters
                </span>
                <span
                  class="MuiTouchRipple-root-375"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`VaultSearchControl mobile renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
  >
    <div
      class="MuiGrid-root-32 MuiGrid-container-33"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <label
          class="MuiFormControlLabel-root-135"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 PrivateSwitchBase-checked-148 MuiCheckbox-checked-142 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-375"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Only show deposits
            </p>
          </span>
        </label>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-item-34 MuiGrid-justify-content-xs-flex-end-51 MuiGrid-grid-xs-true-66"
      >
        <button
          class="MuiButtonBase-root-160 MuiButton-root-229 MuiButton-text-231 makeStyles-button-373"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-230 makeStyles-buttonLabel-374"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173 MuiTypography-displayInline-200"
            >
              Filters
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-375"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
